--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "name": "atlantis",
+  "version": "0.0.1",
   "scripts": {
     "start": "docz dev",
     "test": "jest",
@@ -11,8 +10,9 @@
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx .",
     "lint:css": "stylelint 'packages/**/*.css' --allow-empty-input",
     "lint:markdown": "prettier --check '**/*.md'",
-    "lint": "yarn lint:js && yarn lint:css",
-    "lint:fix": "yarn lint:js --fix && yarn lint:css --fix && yarn lint:markdown --write"
+    "lint": "npm run lint:js && npm run lint:css",
+    "lint:fix": "npm run lint:js -- --fix && npm run lint:css -- --fix && npm run lint:markdown -- --write",
+    "install": "lerna bootstrap"
   },
   "repository": {
     "type": "git",
@@ -28,19 +28,28 @@
     "@babel/preset-env": "^7.4.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@jobber/eslint-config": "file:packages/eslint-config",
+    "@jobber/stylelint-config": "file:packages/stylelint-config",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
     "css-loader": "^2.1.1",
     "docz": "^1.0.0",
     "docz-theme-default": "^1.0.0",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jest": "^22.5.0",
-    "husky": "^2.2.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
+    "husky": "^2.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.7.1",
     "jest-junit": "^6.4.0",
-    "lint-staged": "^8.1.6",
+    "lerna": "^3.14.1",
+    "lint-staged": "^8.1.7",
     "postcss": "^7.0.14",
     "postcss-loader": "^3.0.0",
     "react": "^16.8.6",
