--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,8 +1,13 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "lib": ["dom", "es2018"],
+    "jsx": "react",
+    "declaration": true,
     "rootDir": "src",
-    "outDir": "dist",
+    "outDir": "dist"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["**/*.test.ts", "**/*.test.tsx", "entryPoints.ts"],
+  "references": [{ "path": "../formatters" }]
 }
