--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,9 +5,9 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "npm run build:rollup",
+    "build": "npm run build:cssTypes && npm run build:rollup",
     "build:rollup": "rollup --config",
-    "build:assets": "copyfiles --up 1 'src/**/*.css' dist/",
+    "build:cssTypes": "tcm src",
     "clean": "rm -rf dist/* tsconfig.tsbuildinfo",
     "prepublishOnly": "scripts/entryPoints.ts",
     "prepare": "npm run clean; npm run build",
@@ -44,6 +44,7 @@
     "rollup-plugin-typescript": "^1.0.1",
     "rollup-plugin-typescript2": "^0.21.0",
     "ts-node": "^8.1.0",
+    "typed-css-modules": "^0.3.6",
     "typescript": "^3.4.5"
   },
   "browserslist": [
