Fix a couple little bugs.

--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "postcss src/colors.css --replace",
     "clean": "rm colors.css colors.js colors.json",
-    "prepare": "npm run clean && npm run build"
+    "prepare": "npm run clean; npm run build"
   },
   "devDependencies": {
     "postcss": "^7.0.16",
