--- a/packages/colors/package.json
+++ b/packages/colors/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "postcss": "^7.0.16",
     "postcss-cli": "^6.1.2",
-    "postcss-preset-env": "^6.6.0"
+    "postcss-preset-env": "^6.6.0",
+    "react": "^16.8.6"
   }
 }
