Add Plop to generate components.
Making new components is a bit of a hassle with all the files that need to be seeded. This introduces Plop to streamline things a lot more.

All you need to do now is run `npm run plop`, follow the prompts and you're blessed with a shiny new component ready for your dreams to come true in.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "docz dev",
     "test": "jest",
+    "plop": "plop",
     "build": "docz build",
     "clean": "rm -rf .docz",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx .",
@@ -51,6 +52,7 @@
     "jest-junit": "^6.4.0",
     "lerna": "^3.14.1",
     "lint-staged": "^8.1.7",
+    "plop": "^2.3.0",
     "postcss": "^7.0.14",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
