--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,14 +122,14 @@ jobs:
   deploy_docs:
     executor: aws-cli/default
     steps:
-      - attach_workspace:
-          at: /tmp/workspace
+      # - attach_workspace:
+      #     at: /tmp/workspace
       - aws-cli/install
       - aws-cli/configure:
           aws-access-key-id: ATLANTIS_AWS_ACCESS_KEY_ID
           aws-secret-access-key: ATLANTIS_AWS_SECRET_ACCESS_KEY
       - aws-s3/sync:
-          from: /tmp/workspace/dist
+          from: ~/atlantis/.docz/dist
           to: 's3://${ATLANTIS_S3_BUCKET}/${CIRCLE_PULL_REQUEST##*/}'
           aws-access-key-id: ATLANTIS_AWS_ACCESS_KEY_ID
           aws-secret-access-key: ATLANTIS_AWS_SECRET_ACCESS_KEY
