--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,10 +118,13 @@ jobs:
       - store_artifacts:
           path: ~/atlantis/.docz/dist
           destination: docs
+      - attach_workspace:
+          at: /tmp/workspace
+      - run: cp -r ~/atlantis/.docz/dist /tmp/workspace/
       - persist_to_workspace:
           root: /tmp/workspace
           paths:
-            - ~/atlantis/.docz/dist
+            - dist
 
   deploy_docs:
     executor: aws-cli/default
@@ -153,19 +156,19 @@ workflows:
             - checkout_code
       - lint_javascript:
           requires:
-            - checkout_code
+            # - checkout_code
             - install_dependencies
       - lint_css:
           requires:
-            - checkout_code
+            # - checkout_code
             - install_dependencies
       - test:
           requires:
-            - checkout_code
+            # - checkout_code
             - install_dependencies
       - build_docs:
           requires:
-            - checkout_code
+            # - checkout_code
             - install_dependencies
       - deploy_docs:
           requires:
