Will this update the cache?

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "type": "git",
     "url": "git+https://github.com/GetJobber/atlantis.git"
   },
-  "author": "",
+  "author": "The Frends",
   "bugs": {
     "url": "https://github.com/GetJobber/atlantis/issues"
   },
