--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^16.8.6"
   },
   "devDependencies": {
+    "@testing-library/react": "^8.0.1",
     "@types/classnames": "^2.2.7",
     "@types/glob": "^7.1.1",
     "@types/react": "^16.8.13",
