--- a/packages/formatters/package.json
+++ b/packages/formatters/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jobber/formatters",
-  "version": "0.0.1-pre.7",
+  "version": "0.0.1",
   "license": "UNLICENSED",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
