--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -20,9 +20,7 @@
   ],
   "dependencies": {
     "@jobber/formatters": "^0.0.1",
-    "classnames": "^2.2.6",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "classnames": "^2.2.6"
   },
   "devDependencies": {
     "@testing-library/react": "^8.0.1",
@@ -47,6 +45,10 @@
     "ts-node": "^8.1.0",
     "typed-css-modules": "^0.3.6",
     "typescript": "^3.5.2"
+  },
+  "peerDependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "browserslist": [
     "last 1 version",
