--- a/packages/design/package.json
+++ b/packages/design/package.json
@@ -19,7 +19,6 @@
     "postcss-cli": "^6.1.2",
     "postcss-custom-properties": "^8.0.10",
     "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.6.0",
-    "react": "^16.8.6"
+    "postcss-preset-env": "^6.6.0"
   }
 }
