--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@jobber/design": "file:packages/design",
     "@jobber/eslint-config": "file:packages/eslint-config",
     "@jobber/stylelint-config": "file:packages/stylelint-config",
-    "@testing-library/react": "^8.0.1",
+    "@testing-library/react": "^8.0.4",
+    "@testing-library/user-event": "^4.1.0",
     "@types/jest": "^24.0.14",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
@@ -52,6 +53,7 @@
     "husky": "^2.4.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.7.1",
+    "jest-dom": "^3.5.0",
     "jest-junit": "^6.4.0",
     "lerna": "^3.15.0",
     "lint-staged": "^8.2.1",
