--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint:markdown": "prettier --check '**/*.md'",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:fix": "npm run lint:js -- --fix && npm run lint:css -- --fix && npm run lint:markdown -- --write",
-    "install": "lerna bootstrap"
+    "install": "lerna bootstrap",
+    "release-the-kraken": "npm install && lerna publish"
   },
   "repository": {
     "type": "git",
