--- a/packages/formatters/package.json
+++ b/packages/formatters/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@jobber/formatters",
   "version": "0.0.1",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
