--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^16.8.13",
     "@types/react-dom": "^16.8.4",
     "@types/react-test-renderer": "^16.8.1",
+    "@types/uuid": "^3.4.5",
     "autoprefixer": "^9.5.1",
     "copyfiles": "^2.1.0",
     "glob": "^7.1.4",
@@ -48,7 +49,8 @@
     "rollup-plugin-typescript2": "^0.21.0",
     "ts-node": "^8.1.0",
     "typed-css-modules": "^0.3.6",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "uuid": "^3.3.2"
   },
   "peerDependencies": {
     "react": "^16.8.6",
