--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "npm run lint:js && npm run lint:css",
     "lint:fix": "npm run lint:js -- --fix && npm run lint:css -- --fix && npm run lint:markdown -- --write",
     "install": "lerna bootstrap",
-    "release-the-kraken": "npm install && lerna publish"
+    "release-the-kraken": "npm ci && lerna publish"
   },
   "repository": {
     "type": "git",
