--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -24,6 +24,7 @@
     "@types/lodash": "^4.14.136",
     "@types/uuid": "^3.4.5",
     "classnames": "^2.2.6",
+    "framer-motion": "^1.6.5",
     "lodash": "^4.17.15",
     "time-input-polyfill": "^1.0.7",
     "ts-xor": "^1.0.8",
