--- a/package.json
+++ b/package.json
@@ -40,17 +40,11 @@
     "@types/jest": "^24.0.14",
     "@types/react": "^16.8.20",
     "@types/react-dom": "^16.8.4",
-    "@typescript-eslint/eslint-plugin": "^1.10.2",
-    "@typescript-eslint/parser": "^1.10.2",
     "css-loader": "^3.0.0",
     "docz": "^1.2.0",
     "docz-theme-default": "^1.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-import": "^2.17.3",
+    "eslint": "^6.3.0",
     "eslint-plugin-jest": "^22.6.4",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.13.0",
     "glob": "^7.1.4",
     "husky": "^2.4.1",
     "identity-obj-proxy": "^3.0.0",
@@ -58,11 +52,12 @@
     "jest-dom": "^3.5.0",
     "jest-junit": "^6.4.0",
     "lerna": "^3.15.0",
-    "lint-staged": "^8.2.1",
+    "lint-staged": "^9.2.5",
     "plop": "^2.3.0",
     "postcss": "^7.0.17",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
+    "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "style-loader": "^0.23.1",
