--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -11,6 +11,7 @@
     "@typescript-eslint/parser": "^2.1.0",
     "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.14.3",
