feat: Add Markdown as a component in Atlantis (#95)
* Add common Markdown node types

* commit  packagelog

* update markdown component

* add descriptions for markdown props

* simpler example

* extract out renderers on its own function

* name interface clearly

* clean documentation

* get rid of renderHTML prop

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.2.6",
     "framer-motion": "^1.6.5",
     "lodash": "^4.17.15",
+    "react-markdown": "^4.1.0",
     "time-input-polyfill": "^1.0.7",
     "ts-xor": "^1.0.8",
     "uuid": "^3.3.2"
