--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "lint-staged": "^9.2.5",
     "plop": "^2.3.0",
     "postcss": "^7.0.17",
+    "postcss-custom-media": "^7.0.8",
     "postcss-loader": "^3.0.0",
+    "postcss-media-minmax": "^4.0.0",
     "postcss-preset-env": "^6.6.0",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
