--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -45,8 +45,9 @@
     "glob": "^7.1.4",
     "jest-dom": "^3.5.0",
     "postcss": "^7.0.16",
+    "postcss-custom-media": "^7.0.8",
     "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-media-minmax": "^4.0.0",
     "react-test-renderer": "^16.8.6",
     "rollup": "^1.11.3",
     "rollup-plugin-commonjs": "^9.3.4",
