--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -24,6 +24,7 @@
     "@std-proposal/temporal": "0.0.1",
     "@types/lodash": "^4.14.136",
     "@types/uuid": "^3.4.5",
+    "@use-it/event-listener": "^0.1.3",
     "classnames": "^2.2.6",
     "framer-motion": "^1.6.5",
     "lodash": "^4.17.15",
