--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -24,6 +24,7 @@
     "@std-proposal/temporal": "0.0.1",
     "@types/lodash": "^4.14.136",
     "@types/uuid": "^3.4.5",
+    "@use-it/event-listener": "^0.1.3",
     "classnames": "^2.2.6",
     "framer-motion": "^1.6.5",
     "lodash": "^4.17.15",
@@ -33,13 +34,13 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@testing-library/react": "^8.0.4",
-    "@testing-library/user-event": "^4.1.0",
+    "@testing-library/react": "^9.3.0",
+    "@testing-library/user-event": "^4.2.4",
     "@types/classnames": "^2.2.7",
     "@types/glob": "^7.1.1",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.8.4",
-    "@types/react-test-renderer": "^16.8.1",
+    "@types/react-test-renderer": "^16.9.1",
     "@types/uuid": "^3.4.5",
     "autoprefixer": "^9.5.1",
     "copyfiles": "^2.1.0",
@@ -48,7 +49,7 @@
     "postcss": "^7.0.16",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
-    "react-test-renderer": "^16.8.6",
+    "react-test-renderer": "^16.9.0",
     "rollup": "^1.11.3",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-multi-input": "^0.2.2",
