Extract Plop generators to package.

--- a/.github/semantic.yml
+++ b/.github/semantic.yml
@@ -3,9 +3,8 @@ titleOnly: true
 
 # Valid scopes
 scopes:
-  - base
   - components
+  - generators
   - design
-  - docx
   - eslint
   - stylelint
