--- a/.stylelintignore
+++ b/.stylelintignore
@@ -1,3 +1,3 @@
-packages/design/foundation.css
 public/foundation.css
-plop/templates
+packages/design/foundation.css
+packages/generators/templates
