Ignore nested package lock

--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,7 @@
       "conventionalCommits": true
     },
     "publish": {
-      "ignoreChanges": ["package-lock.json"]
+      "ignoreChanges": ["package-lock.json", "**/package-lock.json"]
     }
   }
 }
