--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -24,6 +24,7 @@
     "@std-proposal/temporal": "0.0.1",
     "@types/lodash": "^4.14.136",
     "@types/uuid": "^3.4.5",
+    "@types/zxcvbn": "^4.4.0",
     "@use-it/event-listener": "^0.1.3",
     "classnames": "^2.2.6",
     "framer-motion": "^1.6.5",
@@ -31,7 +32,8 @@
     "react-markdown": "^4.1.0",
     "time-input-polyfill": "^1.0.7",
     "ts-xor": "^1.0.8",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@testing-library/react": "^9.3.0",
