--- a/packages/generators/package.json
+++ b/packages/generators/package.json
@@ -3,5 +3,8 @@
   "version": "0.0.1",
   "license": "MIT",
   "main": "index.js",
-  "scripts": {}
+  "scripts": {},
+  "dependencies": {
+    "inquirer-path": "^1.0.0-beta5"
+  }
 }
