--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "docz dev",
     "start:withPrivateComponents": "PRIVATE_COMPONENTS=visible docz dev",
     "test": "jest",
-    "plop": "plop -- --path='./'",
+    "plop": "echo '🚧 `npm run plop` is now `npm run generate`'",
+    "generate": "plop -- --path='./'",
     "build": "docz build",
     "clean": "rm -rf .docz",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx .",
