--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -174,9 +174,7 @@ workflows:
             branches:
               only: "master"
           requires:
-            - install_dependencies
-            # TODO: Reenable these before final release.
-            # - lint_javascript
-            # - lint_css
-            # - test
-            # - build_docs
+            - lint_javascript
+            - lint_css
+            - test
+            - build_docs
